--- a/Tennis.ipynb
+++ b/Tennis.ipynb
@@ -184,36 +184,24 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Score (max over agents) from episode 1: 0.0\n",
-      "Score (max over agents) from episode 2: 0.0\n",
-      "Score (max over agents) from episode 3: 0.0\n",
-      "Score (max over agents) from episode 4: 0.0\n",
-      "Score (max over agents) from episode 5: 0.10000000149011612\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(1, 6):                                      # play game for 5 episodes\n",
-    "    env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
-    "    states = env_info.vector_observations                  # get the current state (for each agent)\n",
-    "    scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
-    "    while True:\n",
-    "        actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
-    "        actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
-    "        env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
-    "        next_states = env_info.vector_observations         # get next state (for each agent)\n",
-    "        rewards = env_info.rewards                         # get reward (for each agent)\n",
-    "        dones = env_info.local_done                        # see if episode finished\n",
-    "        scores += env_info.rewards                         # update the score (for each agent)\n",
-    "        states = next_states                               # roll over states to next time step\n",
-    "        if np.any(dones):                                  # exit loop if episode finished\n",
-    "            break\n",
-    "    print('Score (max over agents) from episode {}: {}'.format(i, np.max(scores)))"
+    "# for i in range(1, 6):                                      # play game for 5 episodes\n",
+    "#     env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
+    "#     states = env_info.vector_observations                  # get the current state (for each agent)\n",
+    "#     scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
+    "#     while True:\n",
+    "#         actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
+    "#         actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
+    "#         env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
+    "#         next_states = env_info.vector_observations         # get next state (for each agent)\n",
+    "#         rewards = env_info.rewards                         # get reward (for each agent)\n",
+    "#         dones = env_info.local_done                        # see if episode finished\n",
+    "#         scores += env_info.rewards                         # update the score (for each agent)\n",
+    "#         states = next_states                               # roll over states to next time step\n",
+    "#         if np.any(dones):                                  # exit loop if episode finished\n",
+    "#             break\n",
+    "#     print('Score (max over agents) from episode {}: {}'.format(i, np.max(scores)))"
    ]
   },
   {
@@ -229,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.close()"
+    "# env.close()"
    ]
   },
   {
@@ -243,6 +231,126 @@
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Episode 1\tAverage Score: -0.005\tCurrent Score: -0.005\r",
+      "Episode 2\tAverage Score: -0.005\tCurrent Score: -0.005\r",
+      "Episode 3\tAverage Score: -0.005\tCurrent Score: -0.005\r",
+      "Episode 4\tAverage Score: -0.005\tCurrent Score: -0.005\r",
+      "Episode 5\tAverage Score: -0.005\tCurrent Score: -0.005\r",
+      "Episode 6\tAverage Score: -0.005\tCurrent Score: -0.005\r",
+      "Episode 7\tAverage Score: -0.005\tCurrent Score: -0.005\r",
+      "Episode 8\tAverage Score: -0.005\tCurrent Score: -0.005"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ivan/udacity/rl/p3_collab-compet/ddpg_agent.py:92: UserWarning: torch.nn.utils.clip_grad_norm is now deprecated in favor of torch.nn.utils.clip_grad_norm_.\n",
+      "  torch.nn.utils.clip_grad_norm(self.critic_local.parameters(), 1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 100\tAverage Score: -0.004\tCurrent Score: -0.005\n",
+      "Episode 200\tAverage Score: -0.005\tCurrent Score: -0.005\n",
+      "Episode 300\tAverage Score: -0.005\tCurrent Score: -0.005\n",
+      "Episode 400\tAverage Score: -0.005\tCurrent Score: -0.005\n",
+      "Episode 430\tAverage Score: -0.005\tCurrent Score: -0.005"
+     ]
+    }
+   ],
+   "source": [
+    "from ddpg_agent import Agent\n",
+    "from collections import deque\n",
+    "from maddpg import MADDPG\n",
+    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "%matplotlib inline\n",
+    "all_scores = []\n",
+    "agent = MADDPG(num_agents, state_size, action_size, 1)\n",
+    "\n",
+    "def ddpg(n_episodes=3000, max_t=1000, print_every=100):\n",
+    "    scores_deque = deque(maxlen=print_every)\n",
+    "    \n",
+    "    solved = False\n",
+    "    \n",
+    "    for i_episode in range(1, n_episodes+1):\n",
+    "        env_info = env.reset(train_mode=True)[brain_name]\n",
+    "        states = env_info.vector_observations\n",
+    "        agent.reset()\n",
+    "        scores = np.zeros(num_agents)\n",
+    "        \n",
+    "        for t in range(max_t):\n",
+    "            actions = agent.act(states)\n",
+    "            env_info = env.step(actions)[brain_name] \n",
+    "            next_states = env_info.vector_observations\n",
+    "            rewards = env_info.rewards                         # get reward (for each agent)\n",
+    "            dones = env_info.local_done                        # see if episode finished\n",
+    "            scores += env_info.rewards                         # update the score (for each agent)\n",
+    "            agent.step(states, actions, rewards, next_states, dones)\n",
+    "            states = next_states                               # roll over states to next time step\n",
+    "            \n",
+    "            if np.any(dones):\n",
+    "                break \n",
+    "        # Get the mean of the scores from all agents\n",
+    "        score = scores.mean()\n",
+    "        scores_deque.append(score)\n",
+    "        all_scores.append(score)\n",
+    "        deque_mean = np.mean(scores_deque)\n",
+    "        \n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.3f}\\tCurrent Score: {:.3f}'.format(i_episode, deque_mean, score), end=\"\")\n",
+    "        if i_episode % print_every == 0:\n",
+    "            print('\\rEpisode {}\\tAverage Score: {:.3f}'.format(i_episode, deque_mean))\n",
+    "\n",
+    "        # Print the episode when the environment is solved and continue training\n",
+    "        if len(scores_deque) == 100 and deque_mean > 0.5 and solved == False:\n",
+    "            solved = True\n",
+    "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode, deque_mean))\n",
+    "    \n",
+    "    # Save the param of the trained agent\n",
+    "    torch.save(agent.actor_local.state_dict(), 'checkpoint_actor.pth')\n",
+    "    torch.save(agent.critic_local.state_dict(), 'checkpoint_critic.pth')       \n",
+    "    return all_scores\n",
+    "\n",
+    "all_scores = ddpg()\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "plt.plot(np.arange(1, len(all_scores)+1), all_scores)\n",
+    "plt.ylabel('Score')\n",
+    "plt.xlabel('Episode #')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
