Able to learn something

--- a/Tennis.ipynb
+++ b/Tennis.ipynb
@@ -217,26 +217,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 15\tAverage Score: 0.013\tCurrent Score: 0.000"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ivan/udacity/rl/p3_collab-compet/ddpg_agent.py:99: UserWarning: torch.nn.utils.clip_grad_norm is now deprecated in favor of torch.nn.utils.clip_grad_norm_.\n",
-      "  torch.nn.utils.clip_grad_norm(self.critic_local.parameters(), 1)\n"
+      "/nfs/home/ivanmang/anaconda3/envs/drlnd/lib/python3.6/site-packages/torch/cuda/__init__.py:52: UserWarning: CUDA initialization: Unexpected error from cudaGetDeviceCount(). Did you run some cuda functions before calling NumCudaDevices() that might have already set an error? Error 804: forward compatibility was attempted on non supported HW (Triggered internally at  /opt/conda/conda-bld/pytorch_1616554789074/work/c10/cuda/CUDAFunctions.cpp:109.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 100\tAverage Score: 0.003\tCurrent Score: 0.000\n",
-      "Episode 151\tAverage Score: 0.001\tCurrent Score: 0.000"
+      "Episode 100\tAverage Score: 0.002\tCurrent Score: 0.000\n",
+      "Episode 200\tAverage Score: 0.001\tCurrent Score: 0.000\n",
+      "Episode 300\tAverage Score: 0.022\tCurrent Score: 0.000\n",
+      "Episode 400\tAverage Score: 0.007\tCurrent Score: 0.000\n",
+      "Episode 500\tAverage Score: 0.018\tCurrent Score: 0.000\n",
+      "Episode 600\tAverage Score: 0.024\tCurrent Score: 0.090\n",
+      "Episode 700\tAverage Score: 0.034\tCurrent Score: 0.000\n",
+      "Episode 800\tAverage Score: 0.043\tCurrent Score: 0.090\n",
+      "Episode 900\tAverage Score: 0.069\tCurrent Score: 0.100\n",
+      "Episode 1000\tAverage Score: 0.079\tCurrent Score: 0.090\n",
+      "Episode 1028\tAverage Score: 0.081\tCurrent Score: 0.100"
      ]
     }
    ],
